--- a/Website/style.css
+++ b/Website/style.css
@@ -2,6 +2,12 @@
 {
     font-size: 16px;
     font-family: 'Montserrat';
+    
+    --main-color: #272932;
+    --main-contrast: #E7ECEF;
+    --secondery-color:#0F7173;
+    --third-color: #F05D5E;
+    --forth-color:#D8A47F;
 }
 
 body
@@ -10,7 +16,7 @@ body
     width: 100vw;
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: var(--main-contrast);
     overflow: hidden;
 }
 
@@ -27,12 +33,23 @@ a
     text-decoration: none;
 }
 
+h1
+{
+    font-size: 3em;
+    color: var(--third-color);
+}
+
+p
+{
+    font-size: 1.4em;
+}
+
 .navbar
 {
     min-height: 8%;
     width: 100%;
-    background: black;
-    color: white;
+    background: var(--main-color);
+    color: var(--main-contrast);
 }
 
 .navbar-nav
@@ -51,6 +68,7 @@ a
     height: 100vh;
     width: 100vw;
     overflow: scroll;
+    overflow-x: hidden;
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
 }
@@ -99,8 +117,8 @@ a
 {
     height: 100%;
     width: 100%;
-    filter: blur(8px);
     -webkit-filter: blur(8px);
+    filter: blur(8px);
     object-fit: cover;
     overflow: hidden;
 }
@@ -113,8 +131,8 @@ a
     opacity: 0;
     z-index: -1;
 
-    background: black;
-    border-top: 2px solid white;
+    background: var(--main-color);
+    border-top: 2px solid var(--main-contrast);
     border-bottom-right-radius: 8px;;
 
     display: flex;
@@ -141,13 +159,13 @@ a
     position: absolute;
     width: 30%;
     height: 20%;
-    background: black;
+    background: var(--main-color);
+    color: var(--main-contrast);
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    font-size: 1.5em;
     text-align: center;
+    font-size: 1em;
 }
 
 .logo
@@ -172,35 +190,88 @@ a
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    background: black;
-    color: white;
+    background: var(--main-color);
+    color: var(--main-contrast);
 }
 
 .about-use-image-div
 {
     height: 100%;
     width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .about-us-image
 {
-    display: flex;
     height: 80%;
-    width: 100%;
-    object-fit: cover;
-    overflow: hidden;
+    width: 80%;
 }
 
 .about-us-text-div
 {
     height: 100%;
     width: 50%;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 5%;
+}
+
+.about-us-paragraph
+{
+    text-align: justify;
 }
 
 #featured-work
 {
     margin: 0;
-} 
+}
+
+.featured-work-div
+{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--forth-color);
+}
+
+.featured-work-image
+{
+    width: 100%;
+    height: 100%;
+    -webkit-filter: blur(8px);
+    filter: blur(8px);
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.featured-button
+{
+    font-size: 1.5em;
+    background: var(--main-color);
+    opacity: 0;
+
+    transition: all 0.35s ease-out;
+}
+
+.featured-work-div:hover .featured-button
+{
+    opacity: 1;
+}
+
+.featured-button:hover
+{
+    background: var(--secondery-color);
+}
+
+.featured-work-right-side
+{
+    width: 30%;
+}
 
 #contact-us
 {
