--- a/Website/style.css
+++ b/Website/style.css
@@ -4,7 +4,9 @@
     font-family: 'Montserrat';
     
     --main-color: #272932;
+    --main-color-warm: #363b47;
     --main-contrast: #E7ECEF;
+    --main-contrast-darker: #ccd2d7;
     --secondery-color:#0F7173;
     --third-color: #F05D5E;
     --forth-color:#D8A47F;
@@ -37,6 +39,19 @@ h1
 {
     font-size: 3em;
     color: var(--third-color);
+}
+
+h3
+{
+    font-size: 1.5em;
+}
+
+h4
+{
+    font-size: 0.7em;
+    margin: 0;
+    padding: 0;
+    text-decoration: underline;
 }
 
 p
@@ -80,7 +95,7 @@ p
     display: flex;
     justify-content: center;
     align-items: center;
-    scroll-snap-align: start;
+    
 }
 
 .first-container-section
@@ -101,16 +116,6 @@ p
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.container-section:nth-child(odd)
-{
-    background:rgb(91, 178, 207);
-}
-
-.container-section:nth-child(even)
-{
-    background: rgb(231, 60, 60);
 }
 
 .start-page-picture
@@ -183,7 +188,7 @@ p
     width: 50px;
 }
 
-.about-use-div
+.about-studio-div
 {
     display: flex;
     height: 100%;
@@ -194,7 +199,7 @@ p
     color: var(--main-contrast);
 }
 
-.about-use-image-div
+.about-studio-image-div
 {
     height: 100%;
     width: 50%;
@@ -203,22 +208,24 @@ p
     justify-content: center;
 }
 
-.about-us-image
+.about-studio-image
 {
     height: 80%;
     width: 80%;
+    border-radius: 15px;
 }
 
-.about-us-text-div
+.about-studio-text-div
 {
     height: 100%;
     width: 50%;
     padding-left: 60px;
     padding-right: 60px;
     padding-top: 5%;
+    font-size: 1vw;
 }
 
-.about-us-paragraph
+.about-studio-paragraph
 {
     text-align: justify;
 }
@@ -243,8 +250,8 @@ p
 {
     width: 100%;
     height: 100%;
-    -webkit-filter: blur(8px);
-    filter: blur(8px);
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
     object-fit: cover;
     overflow: hidden;
 }
@@ -253,6 +260,9 @@ p
 {
     font-size: 1.5em;
     background: var(--main-color);
+    border-radius: 8px;
+    height: 20%;
+    width: 30%;
     opacity: 0;
 
     transition: all 0.35s ease-out;
@@ -265,6 +275,9 @@ p
 
 .featured-button:hover
 {
+    border-radius: 100%;
+    height: 30%;
+    width: 18%;
     background: var(--secondery-color);
 }
 
@@ -273,7 +286,181 @@ p
     width: 30%;
 }
 
+.contact-us-parent
+{
+    background: var(--main-color);
+    animation-name: starAnimation;
+    animation-duration: 0.8s;
+    animation-iteration-count: infinite;
+}
+
+.contact-details-div
+{
+    height: 80%;
+    width: 30%;
+    padding: 2%;
+    display: flex;
+    align-items: top;
+    justify-content: left;
+    flex-direction: column;
+    overflow-y: auto;
+    row-gap: 1%;
+    background: #5f707d;
+    border-radius: 25px;
+
+}
+
+@keyframes starAnimation 
+{
+    0%{ background-image: url("Images/Stars/Stars2.png")}
+    30%{ background-image: url("Images/Stars/Stars5.png")}
+    60%{ background-image: url("Images/Stars/Stars1.png")}
+    80%{ background-image: url("Images/Stars/Stars4.png")}
+    100%{ background-image: url("Images/Stars/Stars3.png")}
+}
+
+.contact-us-title
+{
+    margin: 0;
+    text-align: center;
+    text-decoration: underline;
+    color: var(--main-color);
+}
+
+.contact-send-div
+{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-button
+{
+    display: flex;
+    position: relative;
+    background: var(--main-color);
+    height: 130%;
+    transform: translateX(115%);
+    margin-top: 2%;
+    transition: all 0.35s ease-out;
+}
+
+.contact-button:hover
+{
+    background: #444653;
+}
+
+.contact-us-text-area
+{
+    width: 100%;
+    padding: 6px 20px;
+    margin: 8px 0;
+    resize: none;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=text], select
+{
+    width: 100%;
+    padding: 6px 12px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
 #contact-us
 {
     margin: 0;
-} 
+}
+
+.footer-information
+{
+    height: 40vh;
+    width: 100vw;
+    display: flex;
+    scroll-snap-align: start;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-info-div
+{
+    margin-right: 20px;
+    height: 100%;
+    width: 100%;
+}
+
+.text-info-div
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-info-text
+{
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+.google-map
+{
+    border: 0px;
+    height: 100%;
+    width: 100%;
+}
+
+.feature-first-div
+{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.feature-left-div
+{
+    width: 33%;
+    height: 100%;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    background: var(--main-color-warm);
+}
+
+.feature-left-title
+{
+    text-align: right;
+    margin: 20px;
+}
+
+.feature-right-div
+{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    background: var(--main-contrast);
+    overflow: auto;
+}
+
+.feature-right-images
+{
+    width: 70%;
+    height: 70%;
+    padding-left: 1%;
+    object-fit: cover;
+}
+
+.feature-right-images:last-child
+{
+    padding-right: 1%;
+}
