--- a/docs/style.css
+++ b/docs/style.css
@@ -493,3 +493,32 @@ input[type=text], select
 {
     padding-right: 1%;
 }
+
+.about-us-div-parent
+{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-us-title
+{
+    margin: 0;
+    padding: 0;
+    margin-left: 2%;
+}
+
+.about-us-title-div
+{
+    display: flex;
+    align-items: center;
+    height: 15%;
+    background-color: var(--main-contrast)
+}
+
+.about-us-pic-div
+{
+    height: 85%;
+    background-color: #5f707d;
+}
