--- a/docs/style.css
+++ b/docs/style.css
@@ -502,13 +502,6 @@ input[type=text], select
     flex-direction: column;
 }
 
-.about-us-title
-{
-    margin: 0;
-    padding: 0;
-    margin-left: 2%;
-}
-
 .about-us-title-div
 {
     display: flex;
@@ -517,8 +510,38 @@ input[type=text], select
     background-color: var(--main-contrast)
 }
 
+.about-us-lower-div
+{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 85%;
+    background-color: var(--main-contrast);
+}
+
 .about-us-pic-div
 {
-    height: 85%;
-    background-color: #5f707d;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.about-us-title
+{
+    margin: 0;
+    padding: 0;
+    margin-left: 2%;
+}
+
+.about-us-pic
+{
+    width: 45%;
+    border-radius: 8px;
+    box-shadow: 0px 10px 10px;
+    transition: transform .3s ease-out;
+}
+
+.about-us-pic:hover
+{
+    transform: translate(0, -10px);
 }
