--- a/docs/style.css
+++ b/docs/style.css
@@ -22,6 +22,15 @@ body
     overflow: hidden;
 }
 
+.munu-icon
+{
+    width: 40px;
+    height: 40px;
+
+    background-image: url("Images/menuicon.png");
+    background-size: 100%;
+}
+
 ul 
 {
     margin: 0;
@@ -61,10 +70,16 @@ p
 
 .navbar
 {
-    min-height: 8%;
     width: 100%;
+    height: 15vh;
+    max-height: 70px;
     background: var(--main-color);
     color: var(--main-contrast);
+}
+
+.navbar-buttons-show
+{
+    display: flex;
 }
 
 .navbar-nav
@@ -76,6 +91,23 @@ p
     align-items: center;
     justify-content: space-between;
     scroll-snap-align: start;
+}
+
+.navbar-buttons
+{
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+}
+
+.navbar-button
+{
+    min-width: 120px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container 
@@ -123,33 +155,68 @@ p
     height: 100%;
     width: 100%;
     -webkit-filter: blur(8px);
+    z-index: -1;
     filter: blur(8px);
     object-fit: cover;
     overflow: hidden;
 }
 
+.vert-space-around-center
+{
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.dropdown-open
+{
+    display: none;
+}
+
+@media (max-width: 600px) 
+{
+    .dropdown-open
+    { display: inline-block;}
+    
+    .navbar-buttons-show
+    {
+        display: none;
+    }
+}
+
 .dropdown
 {
     position: absolute;
-    left: 0;
-    height: 150px;
-    opacity: 0;
+    width: 100vw;
+    height: 92vh;
     z-index: -1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: top;
+
+    top: 70px;
+    left: 0px;
+    right: 0px;
 
     background: var(--main-color);
     border-top: 2px solid var(--main-contrast);
-    border-bottom-right-radius: 8px;;
-
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    width: 8rem;
-    padding: 0.8rem;
-
-    box-shadow: rgb(2, 8, 20) 0px 0.175em 0.5em;
-    transform: translateY(20px);
 
     transition: opacity .15s ease-out;
+}
+
+.dropdown-button
+{
+    height: 15%;
+    width: 100vw;
+    background-color: var(--main-color);
+}
+
+.dropdown-button:nth-child(even) 
+{
+    background-color: var(--main-color-warm);
 }
 
 .has-dropdown:focus-within .dropdown
@@ -399,7 +466,7 @@ input[type=text], select
 
 .footer-information
 {
-    height: 40vh;
+    height: 100vh;
     width: 100vw;
     display: flex;
     scroll-snap-align: start;
